# code

./: .gitmodules  CMakeLists.txt  appveyor.yml  biicode.conf  server-init.cfg
bii/: layout.bii  policies.bii
bii/cmake/: CMakeLists.txt  bii_glenn_png_vars.cmake  bii_google_gtest_vars.cmake  bii_google_libwebp_vars.cmake  bii_inexor_code_vars.cmake  bii_jpeg_jpeg_vars.cmake  bii_latinga_sdl2_image_vars.cmake  bii_latinga_sdl2_vars.cmake  bii_miguel_ogg_vars.cmake  bii_miguel_sdl2_mixer_vars.cmake  bii_miguel_sdl2_vars.cmake  bii_miguel_smpeg_vars.cmake  bii_miguel_vorbis_vars.cmake  bii_tiff_tiff_vars.cmake  bii_user_code_vars.cmake  bii_zlib_zlib_vars.cmake
inexor/crashreporter/: CMakeLists.txt  CrashReporter.cpp  CrashReporter.h  StackWalker_posix.h  StackWalker_windows.cpp  StackWalker_windows.h  readme.md
inexor/engine/: console.cpp  engine.h  main.cpp  movie.cpp  rendergl.cpp  server.cpp  sound.cpp  world.cpp  worldio.cpp
inexor/fpsgame/: ai.cpp  aiman.h  capture.h  client.cpp  collect.h  ctf.h  entities.cpp  fps.cpp  game.h  monster.cpp  render.cpp  scoreboard.cpp  server.cpp  weapon.cpp
inexor/libraries/: CMakeLists.txt
inexor/net/: MCSocketServer.h
inexor/rpc/: CMakeLists.txt  InexorServiceImpl.cpp  InexorServiceImpl.h  RpcSubsystem.cpp  RpcSubsystem.h  SharedVar_declarations.h  inexor_service.proto  vars.pp
inexor/rpc/proto/: cubescript.proto  rpc.proto  variables.proto  variables_map.proto.in
inexor/shared/: iengine.h  tools.h
inexor/test/util/: Observe.cpp  preprocessor.cpp
inexor/ui/: cefcontextbindings.h  cefcontextmanager.cpp
inexor/util/: InexorException.h  Observe.h  preprocessor.h
tool/: appveyor_create_nightly.bat
